samples/_failures_safe/1761200749_e185c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba6b294b.c: In function ‘main’:
./samples/SAFE/__tmp_ba6b294b.c:141:13: error: expected ‘;’ at end of input
  141 |         free
      |             ^
      |             ;
./samples/SAFE/__tmp_ba6b294b.c:141:9: error: expected declaration or statement at end of input
  141 |         free
      |         ^~~~
./samples/SAFE/__tmp_ba6b294b.c:141:9: error: expected declaration or statement at end of input
